@@ -1,6 +1,10 @@
 language: python
-python: 3.6
-install: 
-    - pip install tox
+python:
+  - 2.7
+  - 3.4
+  - 3.5
+  - 3.6
+install:
+    - pip install tox-travis
 script:
-    - tox --skip-missing-interpreters
+    - tox
