@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,p33,py34,py35,py36,cov-report
+envlist = py27,py34,py35,py36,cov-report
 
 [testenv]
 usedevelop = true
